[project]
name = "mc-notebooks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.0",
    "ipywidgets>=8.1.7",
    "matplotlib>=3.10.3",
    "mc-postgres-db>=1.1.6",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "prefect>=3.4.10",
    "scikit-learn>=1.7.1",
    "statsmodels>=0.14.5",
    "tqdm>=4.67.1",
    "xgboost>=3.0.2",
]
